# sandbox

adserver-rs/: Cargo.toml  README.md
hello_elixir_phoenix/: .gitignore  README.md  mix.exs
hello_elixir_phoenix/assets/: tailwind.config.js
hello_elixir_phoenix/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
hello_elixir_phoenix/lib/: hello_elixir_phoenix.ex  hello_elixir_phoenix_web.ex
hello_elixir_phoenix/lib/hello_elixir_phoenix/: application.ex  mailer.ex  repo.ex  timelines.ex  user.ex
hello_elixir_phoenix/lib/hello_elixir_phoenix/timelines/: post.ex
hello_elixir_phoenix/lib/hello_elixir_phoenix_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
hello_elixir_phoenix/lib/hello_elixir_phoenix_web/components/: core_components.ex  layouts.ex
hello_elixir_phoenix/lib/hello_elixir_phoenix_web/controllers/: error_html.ex  error_json.ex  page_html.ex  (+3 more)
hello_elixir_phoenix/priv/repo/: seeds.exs
hello_elixir_phoenix/test/: test_helper.exs
hello_elixir_phoenix/test/hello_elixir_phoenix/: timelines_test.exs
hello_elixir_phoenix/test/support/: conn_case.ex  data_case.ex
python-fastapi/: Dockerfile  Makefile  README.md  compose.yaml  database.py  main.py  models.py  pyproject.toml  schemas.py
python-fastapi/.github/workflows/: python-build-and-test.yaml
python-fastapi/document/: setup-pycharm.md
sandbox-laravel-modules/: composer.json  modules_statuses.json
sandbox-laravel-modules/Modules/Batch/: composer.json  module.json  vite.config.js
sandbox-laravel-modules/Modules/ExternalApi/: composer.json  module.json  vite.config.js
(+38 files in other folders)
